@@ -1,3 +1,6 @@
+15:
+- Move thoradia-libmediainfo to virtual.thoradia-mono
+
 14:
 - Update to 2.0.0.4689
 - Update thoradia-libmediainfo to 0.7.94
